[gd_scene load_steps=16 format=3 uid="uid://dmyonqo71hwv7"]

[ext_resource type="Texture2D" uid="uid://cah4vca5mxd1w" path="res://sprite/info.png" id="1"]
[ext_resource type="Texture2D" uid="uid://74hvjoth7rxe" path="res://sprite/a4/LED.png" id="2"]
[ext_resource type="Texture2D" uid="uid://xplooqgyhlw1" path="res://sprite/try.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dxesaj08nynda" path="res://sprite/standard.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b5g0ih0pqjrji" path="res://sprite/close.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cbtyp01b7nf1p" path="res://sprite/exer.png" id="7"]
[ext_resource type="Script" path="res://scripts/Base.gd" id="8"]
[ext_resource type="Script" path="res://scripts/alt/Exer.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://dveeswqio62ao" path="res://sprite/buttonstyle.png" id="11"]
[ext_resource type="Texture2D" uid="uid://d4gpvavxu7d5u" path="res://sprite/aufgabe.png" id="12"]
[ext_resource type="PackedScene" uid="uid://c2ij3ofp8tbjf" path="res://scenes/alt/ButtonBack.tscn" id="13"]
[ext_resource type="Texture2D" uid="uid://bpec05rh2byhc" path="res://sprite/a5/ex1.png" id="14"]
[ext_resource type="Texture2D" uid="uid://ct1cji3i8obkl" path="res://sprite/a5/ex2.png" id="15"]
[ext_resource type="Texture2D" uid="uid://kegvgxvbq300" path="res://sprite/a5/ex4.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bcgyqu0d3q1d0" path="res://sprite/a5/ex3.png" id="17"]

[node name="Aufgabe_4" type="Node2D" groups=["saver"]]
script = ExtResource("8")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("4")
centered = false

[node name="Frame" type="Node2D" parent="."]
position = Vector2(102, 217)
scale = Vector2(0.7, 0.7)

[node name="try" type="Sprite2D" parent="Frame"]
texture = ExtResource("3")

[node name="try" type="Label" parent="Frame/try"]
mouse_filter = 1
text = "probieren"

[node name="Try" type="Node2D" parent="Frame"]
visible = false
z_index = 1
position = Vector2(-145.714, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("10")

[node name="Aufgabe" type="Sprite2D" parent="Frame/Try"]
texture = ExtResource("12")
centered = false

[node name="title" type="Label" parent="Frame/Try/Aufgabe"]
text = "LED Schaltungen"

[node name="text" type="Label" parent="Frame/Try/Aufgabe"]
text = "Teste unter TinkerCAD, welche Möglichkeiten es gibt 5 LEDs mit nur einem Widerstand zu verbinden."

[node name="ButtonHelp1" type="Node2D" parent="Frame/Try/Aufgabe"]
visible = false
position = Vector2(298, 373)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame/Try/Aufgabe/ButtonHelp1"]
texture = ExtResource("11")

[node name="Buttonhelp" type="Label" parent="Frame/Try/Aufgabe/ButtonHelp1/ButtonSprite"]
mouse_filter = 1
text = " Hilfe 1"

[node name="Help1" type="Node2D" parent="Frame/Try/Aufgabe"]
visible = false
z_index = 1
position = Vector2(2.28882e-05, -4.57764e-05)

[node name="Aufgabe" type="Sprite2D" parent="Frame/Try/Aufgabe/Help1"]
texture = ExtResource("4")
centered = false

[node name="ButtonClose" type="Node2D" parent="Frame/Try/Aufgabe/Help1"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame/Try/Aufgabe/Help1/ButtonClose"]
texture = ExtResource("5")

[node name="Buttonhelpclose" type="Label" parent="Frame/Try/Aufgabe/Help1/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonClose" type="Node2D" parent="Frame/Try"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame/Try/ButtonClose"]
texture = ExtResource("5")

[node name="Buttonlabel" type="Label" parent="Frame/Try/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="Frame2" type="Node2D" parent="."]
position = Vector2(297, 217)
scale = Vector2(0.7, 0.7)

[node name="exer" type="Sprite2D" parent="Frame2"]
texture = ExtResource("7")

[node name="exer" type="Label" parent="Frame2/exer"]
mouse_filter = 1
text = "prüfen"

[node name="Exer" type="Node2D" parent="Frame2"]
visible = false
z_index = 1
position = Vector2(-414.286, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("10")

[node name="Aufgabe" type="Sprite2D" parent="Frame2/Exer"]
texture = ExtResource("12")
centered = false

[node name="title" type="Label" parent="Frame2/Exer/Aufgabe"]
text = "LEDs"

[node name="text" type="Label" parent="Frame2/Exer/Aufgabe"]
text = "In welchen Schaltungen  wird die LED leuchten? Probiere es aus!"

[node name="Ex2" type="Sprite2D" parent="Frame2/Exer/Aufgabe/text"]
position = Vector2(206, 156)
scale = Vector2(0.732955, 0.732955)
texture = ExtResource("15")

[node name="Ex3" type="Sprite2D" parent="Frame2/Exer/Aufgabe/text"]
position = Vector2(346.001, 157)
scale = Vector2(0.732955, 0.732955)
texture = ExtResource("17")

[node name="Ex4" type="Sprite2D" parent="Frame2/Exer/Aufgabe/text"]
position = Vector2(485.001, 158)
scale = Vector2(0.732955, 0.732955)
texture = ExtResource("16")

[node name="Ex1" type="Sprite2D" parent="Frame2/Exer/Aufgabe/text"]
position = Vector2(67.0003, 155)
scale = Vector2(0.732955, 0.732955)
texture = ExtResource("14")

[node name="ButtonClose" type="Node2D" parent="Frame2/Exer"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/ButtonClose"]
texture = ExtResource("5")

[node name="Buttonlabel" type="Label" parent="Frame2/Exer/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonHelp1" type="Node2D" parent="Frame2/Exer"]
visible = false
position = Vector2(298, 373)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/ButtonHelp1"]
texture = ExtResource("11")

[node name="Buttonhelp" type="Label" parent="Frame2/Exer/ButtonHelp1/ButtonSprite"]
mouse_filter = 1
text = " Hilfe 1"

[node name="Help1" type="Node2D" parent="Frame2/Exer"]
visible = false
z_index = 1
position = Vector2(2.28882e-05, -4.57764e-05)

[node name="Aufgabe" type="Sprite2D" parent="Frame2/Exer/Help1"]
texture = ExtResource("4")
centered = false

[node name="ButtonClose" type="Node2D" parent="Frame2/Exer/Help1"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/Help1/ButtonClose"]
texture = ExtResource("5")

[node name="Buttonhelpclose" type="Label" parent="Frame2/Exer/Help1/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="Frame3" type="Node2D" parent="."]
position = Vector2(490, 217)
scale = Vector2(0.7, 0.7)

[node name="info" type="Sprite2D" parent="Frame3"]
texture = ExtResource("1")

[node name="info" type="Label" parent="Frame3/info"]
mouse_filter = 1
text = "lesen"

[node name="Info" type="Node2D" parent="Frame3"]
z_index = 1
position = Vector2(-700, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("10")

[node name="Aufgabe" type="Sprite2D" parent="Frame3/Info"]
texture = ExtResource("12")
centered = false

[node name="title" type="Label" parent="Frame3/Info/Aufgabe"]
text = "LEDs"

[node name="text" type="Label" parent="Frame3/Info/Aufgabe"]
text = "Eine LED besteht aus einem Halbleiterkristall, einer Anode (-), einer Kathode(+) und einer Kunststofflinse.
Der Halbleiterkristall erzeugt Licht mittels physikalischer Prozesse. Die LED muss immer in der richtigen Richtung eingebaut werden, das lange Beinchen ist die Plus-Seite und muss mit dem Plus-Pol verbunden werden. Das kurze Beinchen geht an GND. Eine LED muss immer mit einem Widerstand in Reihe geschalten sein, da sie sonst kaputt geht.
"

[node name="Led" type="Sprite2D" parent="Frame3/Info/Aufgabe/text"]
position = Vector2(276, 236)
texture = ExtResource("2")

[node name="ButtonClose" type="Node2D" parent="Frame3/Info"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame3/Info/ButtonClose"]
texture = ExtResource("5")

[node name="Buttonlabel" type="Label" parent="Frame3/Info/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonBack" parent="." instance=ExtResource("13")]

[node name="Buttonstyle" type="Sprite2D" parent="."]
position = Vector2(300, 66)
texture = ExtResource("11")

[node name="Label" type="Label" parent="Buttonstyle"]
text = "LEDs"

[connection signal="gui_input" from="Frame/try/try" to="." method="_on_try_gui_input"]
[connection signal="mouse_entered" from="Frame/try/try" to="." method="_on_try_mouse_entered"]
[connection signal="mouse_exited" from="Frame/try/try" to="." method="_on_try_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Aufgabe/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame/Try" method="_on_Buttonhelp_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Aufgabe/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame/Try" method="_on_Buttonhelp_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Aufgabe/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame/Try" method="_on_Buttonhelp_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Aufgabe/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame/Try" method="_on_Buttonhelpclose_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Aufgabe/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame/Try" method="_on_Buttonhelpclose_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Aufgabe/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame/Try" method="_on_Buttonhelpclose_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/ButtonClose/ButtonSprite/Buttonlabel" to="Frame/Try" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/ButtonClose/ButtonSprite/Buttonlabel" to="Frame/Try" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/ButtonClose/ButtonSprite/Buttonlabel" to="Frame/Try" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame2/exer/exer" to="." method="_on_exer_gui_input"]
[connection signal="mouse_entered" from="Frame2/exer/exer" to="." method="_on_exer_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/exer/exer" to="." method="_on_exer_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame2/Exer" method="_on_Buttonhelp_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame2/Exer" method="_on_Buttonhelp_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame2/Exer" method="_on_Buttonhelp_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame2/Exer" method="_on_Buttonhelpclose_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame2/Exer" method="_on_Buttonhelpclose_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame2/Exer" method="_on_Buttonhelpclose_mouse_exited"]
[connection signal="gui_input" from="Frame3/info/info" to="." method="_on_info_gui_input"]
[connection signal="mouse_entered" from="Frame3/info/info" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/info/info" to="." method="_on_info_mouse_exited"]
[connection signal="gui_input" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_exited"]
